force-app/main/default/objects/Creative_Hub__mdt/Creative_Hub__mdt.object-meta.xml
<CustomObject>
    <label>Creative Hub</label>
    <pluralLabel>Creative Hubs</pluralLabel>
</CustomObject>