force-app/main/default/objects/Creative_Hub__mdt/fields/DocURL__c.field-meta.xml
<CustomField>
    <fullName>DocURL__c</fullName>
    <description>Url for document uplode</description>
    <label>DocURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>