force-app/main/default/objects/Creative_Hub__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>