force-app/main/default/objects/Creative_Hub__mdt/fields/Token_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_End_Point_URL__c</fullName>
    <label>Token End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>