force-app/main/default/objects/Creative_Hub__mdt/fields/urlForDocBinding__c.field-meta.xml
<CustomField>
    <fullName>urlForDocBinding__c</fullName>
    <label>urlForDocBinding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>